--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="views_set">Views</string>
     <string name="views_set_li">Set min views</string>
     <string name="views_set_title">min views(0-50000)</string>
+    <string name="BookmarkCount_set">Bookmark count</string>
+    <string name="BookmarkCount_set_li">Set min bookmark count</string>
+    <string name="BookmarkCount_set_title">min bookmark count(0-50000)</string>
     <string name="method_title">Push Mode</string>
     <string name="we">The application is Muzei Wallpaper Source,Plese install Muzei Live Wallpaper</string>
     <string name="permission">Please allow storage permissions</string>
