modify error information.

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -33,7 +33,7 @@
     <string name="method_title">推荐模式</string>
     <string name="we">这个 APP 是 Muzei Live Wallpaper 的壁纸源，不能单独运行，请先安装 Muzei 并在 Muzei 的 Source 设置界面选择启动即可。</string>
 
-    <string name="permission">请允许 Muzei 和 app 使用存储权限</string>
+    <string name="permission">由于网络不佳，图像下载失败。</string>
     <string name="hideico">隐藏图标</string>
     <string name="showico">显示图标</string>
     <string name="autopx_set">按屏幕大小适配图片(beta)</string>
