--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="BookmarkCount_set_title">min bookmark count(0-50000)</string>
     <string name="method_title">Push Mode</string>
     <string name="we">The application is Muzei Wallpaper Source,Plese install Muzei Live Wallpaper</string>
-    <string name="permission">Please allow storage permissions</string>
+    <string name="permission">Image download failed due to poor network.</string>
     <string name="showico">Show icon</string>
     <string name="hideico">Hide icon</string>
     <string name="autopx_set">Adapt the image by screen size</string>
